Ensure cards are aligned
Refs #2365

--- a/assets/style.css
+++ b/assets/style.css
@@ -2163,6 +2163,7 @@ skip-link {
   > li {
     inline-size: auto;
     max-inline-size: 100%;
+    margin-block-start: 0;
     text-align: initial;
   }
 
